--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/prob_bolas_subconjuntos.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -68,7 +68,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/prob_bolsa_bolas.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolsa_bolas.png\" width=\"400\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Ejemplo de Espacio Muestral $\\mathcal{M}$</p>\n",
@@ -107,7 +107,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/prob_bolas_subconjuntos.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Ejemplos de eventos del Espacio Muestral $\\mathcal{M}$</p>\n",
@@ -445,7 +445,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
