--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Variables_Aleatorias.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Variables_Aleatorias.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/barplot.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/barplot.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -61,7 +61,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\"> Dos datos de seis caras</p>\n",
