--- a/Fundamentacion_Estadistica/Cuadernos/ti_Teoria_Informacion.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/ti_Teoria_Informacion.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentaci%C3%B3n%20Estad%C3%ADstica/Imagenes/entropia.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/entropia.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
