--- a/Redes_Neuronales/Cuadernos/RedesNeuronales_intro.ipynb
+++ b/Redes_Neuronales/Cuadernos/RedesNeuronales_intro.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/mind-544404__340.webp\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/mind-544404__340.webp\" width=\"600\" height=\"400\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -77,7 +77,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/brain-5885161_960_720.webp\" width=\"500\" height=\"400\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/brain-5885161_960_720.webp\" width=\"500\" height=\"400\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -102,7 +102,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/Structure-Of-Neurons-In-Brain.jpeg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/Structure-Of-Neurons-In-Brain.jpeg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -135,7 +135,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/neurons-1773922__340.webp\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/neurons-1773922__340.webp\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -160,7 +160,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/electronics-3007664_960_720.jpg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/electronics-3007664_960_720.jpg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -173,7 +173,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/neurona_artificial.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/neurona_artificial.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -186,7 +186,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/neural_network.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/neural_network.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -229,7 +229,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/RN_modernas.png\" width=\"800\" height=\"500\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/RN_modernas.png\" width=\"800\" height=\"500\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -285,7 +285,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes%20Neuronales/Imagenes/ANN_Capa_Oculta.png\" width=\"800\" height=\"600\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/ANN_Capa_Oculta.png\" width=\"800\" height=\"600\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
