Revisión libros Estadística

--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Distribuciones_continuas.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Distribuciones_continuas.ipynb
@@ -142,7 +142,7 @@
    "source": [
     "Verifique la afirmación anterior. \n",
     "\n",
-    "*Ayuda*: $\\text{Prob}[0.5,0.7] =\\int_{0.5}^{0.7} g(x)dx $."
+    "**Ayuda**: $\\text{Prob}[0.5,0.7] =\\int_{0.5}^{0.7} g(x)dx $."
    ]
   },
   {
@@ -507,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
