Revisión #1 cuadernos Matemáticas

--- a/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
@@ -499,7 +499,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Wikipedia](https://es.wikipedia.org/wiki/L%C3%A1mpara_de_plasma)"
+    "Fuente: [Wikipedia](https://es.wikipedia.org/wiki/L%C3%A1mpara_de_plasma#/media/Archivo:Plasma-lamp_2.jpg)"
    ]
   },
   {
@@ -523,8 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">revisar link de motor</span>\n",
-    "Voy aquí"
+    "<span style=\"color:green\">El enlace de \"Motor\" no lleva a la imagen, se recomienda cambiar.</span>"
    ]
   },
   {
@@ -544,6 +543,13 @@
    },
    "source": [
     "## <span style=\"color:#4361EE\">3. Modelos Estocásticos</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:green\">Verificar si las siguientes imágenes son de Aprendizaje Profundo</span>"
    ]
   },
   {
@@ -581,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Regresión Usando una Red Neuronal:**\n",
+    "**Regresión usando una Red Neuronal:**\n",
     "\n",
     "<figure>\n",
     "<center>\n",
@@ -597,7 +603,7 @@
     "id": "X2YWc4SmAjmG"
    },
    "source": [
-    "**Criterio de Evalución**\n",
+    "**Criterio de Evaluación**\n",
     "\n",
     "<figure>\n",
     "<center>\n",
@@ -617,9 +623,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"color:green\">Los siguientes enlaces llevan a explicaciones en inglés</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[Concepto](https://en.wikipedia.org/wiki/Universal_approximation_theorem)\n",
     "\n",
     "[Ejemplo](https://medium.com/hackernoon/illustrative-proof-of-universal-approximation-theorem-5845c02822f6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:green\">Cambiar imagen. Licencia no encontrada</span>"
    ]
   },
   {
