--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
@@ -6,14 +6,15 @@
     "tags": []
    },
    "source": [
-    "# <span style=\"color:#F72585\"><center>Probabilidad</center></span>"
+    "(conceptos-basicos)=\n",
+    "# <span style=\"color:#F72585\">Probabilidad</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>Conceptos básicos</center>"
+    "Conceptos básicos"
    ]
   },
   {
@@ -21,9 +22,7 @@
    "metadata": {},
    "source": [
     "<figure>\n",
-    "<center>\n",
-    "<img src=\"../Imagenes/prob_bolas_subconjuntos.png\" width=\"400\" height=\"300\" align=\"center\"/>\n",
-    "</center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
     "</figure>\n",
     "\n",
     "Fuente: Alvaro Montenegro"
@@ -67,10 +66,10 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/prob_bolsa_bolas.png\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolsa_bolas.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
-    "<p style=\"text-align:center\">Ejemplo de Espacio Muestral $\\mathcal{M}$</p>\n",
+    "<p style=\"text-align:center\">Ejemplo de Espacio Muestral M</p>\n",
     "</figcaption>\n",
     "</figure>"
    ]
@@ -106,10 +105,10 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/prob_bolas_subconjuntos.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"600\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
-    "<p style=\"text-align:center\">Ejemplos de eventos del Espacio Muestral $\\mathcal{M}$</p>\n",
+    "<p style=\"text-align:center\">Ejemplos de eventos del Espacio Muestral M</p>\n",
     "</figcaption>\n",
     "</figure>"
    ]
@@ -444,7 +443,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/dados_negro.jpg\" width=\"300\" height=\"200\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
