--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Conceptos_Basicos.ipynb
@@ -7,14 +7,14 @@
    },
    "source": [
     "(conceptos-basicos)=\n",
-    "# <span style=\"color:#F72585\">Probabilidad</span>"
+    "# <span style=\"color:#F72585\"><center>Probabilidad</center></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conceptos básicos"
+    "<center>Conceptos básicos</center>"
    ]
   },
   {
@@ -22,7 +22,9 @@
    "metadata": {},
    "source": [
     "<figure>\n",
+    "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolas_subconjuntos.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
+    "</center>\n",
     "</figure>\n",
     "\n",
     "Fuente: Alvaro Montenegro"
@@ -66,7 +68,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolsa_bolas.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/prob_bolsa_bolas.png\" width=\"300\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Ejemplo de Espacio Muestral M</p>\n",
