--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Distribuciones_continuas.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Distribuciones_continuas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Distribuciones de probabilidad continuas</span>"
+    "# <span style=\"color:#F72585\"><center>Distribuciones de probabilidad continuas</center></span>"
    ]
   },
   {
