--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Var_Prob_conjunta.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Var_Prob_conjunta.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Probabilidad Conjunta y Entropía Cruzada</span>"
+    "# <span style=\"color:#F72585\"><center>Probabilidad Conjunta y Entropía Cruzada</center></span>"
    ]
   },
   {
