--- a/Fundamentacion_Estadistica/Cuadernos/Prob_Variables_Aleatorias.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Prob_Variables_Aleatorias.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "(variables-aleatorias)=\n",
-    "# <span style=\"color:#F72585\">Variables Aleatorias</span>"
+    "# <span style=\"color:#F72585\"><center>Variables Aleatorias</center></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conceptos básicos"
+    "<center>Conceptos básicos</center>"
    ]
   },
   {
