--- a/Fundamentacion_Estadistica/Cuadernos/Regresión-Lineal-Pyton-Copy1.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/Regresión-Lineal-Pyton-Copy1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Regresión Lineal en Python</span>"
+    "# <span style=\"color:#F72585\"><center>Regresión Lineal en Python</center></span>"
    ]
   },
   {
