--- a/Fundamentacion_Estadistica/Cuadernos/ti_Teoria_Informacion.ipynb
+++ b/Fundamentacion_Estadistica/Cuadernos/ti_Teoria_Informacion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Teoría de la Información</span>"
+    "# <span style=\"color:#F72585\"><center>Teoría de la Información</center></span>"
    ]
   },
   {
@@ -13,7 +13,7 @@
     "tags": []
    },
    "source": [
-    "Conceptos básicos"
+    "<center>Conceptos básicos</center>"
    ]
   },
   {
@@ -21,8 +21,9 @@
    "metadata": {},
    "source": [
     "<figure>\n",
-    "\n",
+    "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Estadistica/Imagenes/entropia.jpg\" width=\"600\" height=\"400\" align=\"center\" />  \n",
+    "</center>\n",
     "</figure>\n",
     "\n",
     "Fuente: [pixabay](https://pixabay.com/es/illustrations/orden-caos-wuerfelmeer-geometr%c3%ada-3431153/)"
