--- a/Fundamentacion_Matematica/Cuadernos/Tensor_Distribucion_Prob.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/Tensor_Distribucion_Prob.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/ann_clasification.ppm\" width=\"500\" height=\"300\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/ann_clasification.ppm\" width=\"600\" height=\"400\" /> \n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -105,7 +105,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/svm.png\" width=\"500\" height=\"300\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/svm.png\" width=\"600\" height=\"400\" /> \n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -131,11 +131,11 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/sepal.webp\" width=\"400\" height=\"300\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/sepal.webp\" width=\"600\" height=\"400\" /> \n",
     "</center>\n",
     "</figure>\n",
     "\n",
-    "[Fuente](https://pythonmachinelearning.pro/classification-with-support-vector-machines/)"
+    "Fuente: [Classification with Support Vector Machines](https://pythonmachinelearning.pro/classification-with-support-vector-machines/)"
    ]
   },
   {
@@ -218,11 +218,11 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/barplot.png\" width=\"400\" height=\"300\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/barplot.png\" width=\"600\" height=\"400\" /> \n",
     "</center>\n",
     "</figure>\n",
     "\n",
-    "[Fuente](https://github.com/dermotkel/main_project)"
+    "Fuente: [Programming and Scripting - Dermot Kelleher](https://github.com/dermotkel/main_project)"
    ]
   },
   {
@@ -231,14 +231,6 @@
    "metadata": {},
    "source": [
     "Esta representación de los tensores en forma de distribución de probabilidad asociada a las categorías es el insumo para la clasificación."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c7339a5",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:#4361EE\">Referencias</span>"
    ]
   }
  ],
