--- a/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mod_numbers.png\" height='200' width='200' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_numbers.png\" height='200' width='200' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -163,7 +163,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pregunta: ¿Qué cae más rápido al suelo?"
+    "```{admonition} Cuidado\n",
+    ":class: question\n",
+    "¿Qué cae más rápido al suelo?\n",
+    "\n",
+    "```\n"
    ]
   },
   {
@@ -175,7 +179,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://steemitimages.com/DQmTwoKJXYSzr9wHSRx5sdNwiPbH5YrB2amBR2CPadVzV2i/p051dk5h.jpg\" height='500' width='300' />\n",
+    "<img src=\"https://steemitimages.com/DQmTwoKJXYSzr9wHSRx5sdNwiPbH5YrB2amBR2CPadVzV2i/p051dk5h.jpg\" height='300' width='300' />\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -186,17 +190,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Respuesta:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "yQSebzW7G2cy"
-   },
-   "source": [
-    "Puedes dar clic [aquí](http://www.youtube.com/watch?v=KDp1tiUsZw8 \"Feather-Hammer\") para ver la respuesta."
+    "```{admonition} Respuesta\n",
+    ":class: tip\n",
+    "Puedes dar clic [aquí](http://www.youtube.com/watch?v=KDp1tiUsZw8 \"Feather-Hammer\") para ver la respuesta.\n",
+    "```\n"
    ]
   },
   {
@@ -331,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ejemplo:"
+    "### <span style=\"color:#4CC9F0\">Ejemplo</span>\n"
    ]
   },
   {
@@ -413,13 +410,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Recuerde:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```{admonition} Recuerde\n",
+    ":class: tip\n",
     "Un sistema tiene sólo tres opciones:\n",
     "\n",
     "- Tiene solución:\n",
@@ -429,7 +421,8 @@
     "\n",
     "Supongamos que tiene solución única. La solución se escribe como:\n",
     "\n",
-    "$$\\vec{x}=E^{-1} \\text{ }\\vec{b}$$"
+    "$$\\vec{x}=E^{-1} \\text{ }\\vec{b}$$\n",
+    "```"
    ]
   },
   {
@@ -500,15 +493,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "¿Qué se puede hacer con esas ecuaciones?\n",
-    "\n",
-    "[![Motor](../Imagenes/mod_motor.png)](https://www.instagram.com/p/BWqQDwkhmFOxp53nTMzfn3WHpyD296gqr7BWlY0/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "ZkUDj_k2AjmD"
@@ -530,7 +514,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mod_datos.jpg\" height='700' width='700' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_datos.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -543,7 +527,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mod_reg1.jpg\" height='700' width='700' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_reg1.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -556,7 +540,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mod_reg2.jpg\" height='700' width='700' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_reg2.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -572,7 +556,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mod_loss.jpg\" height='700' width='700' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_loss.jpg\" height='400' width='600' />\n",
     "</center>\n",
     "</figure>"
    ]
@@ -599,18 +583,11 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/mod_machine-learning-map.png\" height='700' width='700' />\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Fundamentacion_Matematica/Imagenes/mod_machine-learning-map.png\" height='600' width='800' />\n",
     "</center>\n",
     "</figure>\n",
     "\n",
     "Fuente: [Homemade Machine Learning](https://github.com/trekhleb/homemade-machine-learning)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:#4361EE\">Referencias</span>"
    ]
   }
  ],
@@ -628,7 +605,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -642,7 +619,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+   }
   }
  },
  "nbformat": 4,
