--- a/Redes_Neuronales/Cuadernos/RedesNeuronales_intro.ipynb
+++ b/Redes_Neuronales/Cuadernos/RedesNeuronales_intro.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\"><center>Introducción a Redes Neuronales</center></span>"
+    "# <span style=\"color:#F72585\">Introducción a Redes Neuronales</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>Introducción</center>"
+    "Introducción"
    ]
   },
   {
@@ -24,9 +24,7 @@
    },
    "source": [
     "<figure>\n",
-    "<center>\n",
     "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/mind-544404__340.webp\" width=\"600\" height=\"400\" align=\"center\" /> \n",
-    "</center>   \n",
     "</figure>\n",
     "\n",
     "Fuente: [imágenes libres en pixabay](https://pixabay.com/es/images/search/neurons/)"
@@ -539,8 +537,11 @@
     "\n",
     "$$\n",
     "\\tilde{y} =\\tilde{x}\\tilde{W}^1\\tilde{G}^1\\tilde{W}^2\\tilde{G}^2 = x\\tilde{W}\n",
-    "$$,\n",
-    "donde $\\tilde{W}=\\tilde{W}^1\\tilde{G}^1\\tilde{W}^2\\tilde{G}^2$.\n",
+    "$$\n",
+    "donde \n",
+    "$$\n",
+    "\\tilde{W}=\\tilde{W}^1\\tilde{G}^1\\tilde{W}^2\\tilde{G}^2\n",
+    "$$ .\n",
     "\n",
     "$\\leadsto$ Así, en este caso la RNP se reduce a un modelo lineal simple, que no es muy útil en la práctica."
    ]
@@ -593,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -607,9 +608,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.8"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
